# aasbrain-concept-description-repo

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSE  docker-compose.yml  requirements.txt  setup.cfg  sonar-project.properties  testing-requirements.txt  tox.ini
.github/workflows/: docker-image.yml  python-app.yml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  aas_namespace.py  abstract_lang_string.py  administrative_information.py  annotated_relationship_element.py  asset_administraion_shell.py  asset_information.py  asset_kind.py  basic_event_element.py  blob.py  capability.py  concept_description.py  data_element.py  data_specification_iec_61360.py  data_type_def_xsd.py  embedded_data_specification.py  entity.py  event_element.py  extension.py  file.py  has_data_specification.py  has_extensions.py  has_kind.py  has_semantics.py  identifiable.py  key.py  key_types.py  lang_string_name_type.py  lang_string_text_type.py  level_type.py  model_type.py  modeling_kind.py  multi_language_property.py  operation.py  property.py  qualifable.py  qualifier.py  qualifier_kind.py  range.py  rdfiable.py  (+15 more)
app/repository/: __init__.py  concept_description_repository.py  mock_concepts.json
docs/: README.md  decisions.md  jena-deployment.md
src/aasbrain_app/: config.py  main.py
src/aasbrain_models/: __init__.py  abstract_lang_string.py  administrative_information.py  annotated_relationship_element.py  asset_administraion_shell.py  key.py  (+38 more)
tests/: maximal.json  minimal.json  model_test.py  model_tests.py  rest_test.py
(+26 files in other folders)
