[metadata]
name = aasbrain
version = 0.1.0
author = Hossein Rimaz
author_email = hossein.rimaz@dfki.de
description = to be announced
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhrimaz/aasbrain-concept-description-repo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi==0.108.0
    pydantic==2.5.3
    pydantic-settings==2.1.0
    uvicorn[standard]>=0.23.2
    loguru==0.7.2
    websockets==12.0
    httpx==0.26.0
    ariadne==0.21
    redis[hiredis]>=5.0.0
    rdflib>=7.0.0
    pyshacl
    starlette>=0.27.0
    requests>=2.31.0

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio==0.23.2
    pytest-aiohttp
    pytest-trio
    pytest-tornasync
    black
    flake8
    pytest-html
    pytest-cov

[flake8]
count = True
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist,
    venv
max-line-length = 88
show-source = True
statistics = True